--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div id="info">
             <h2>Nome da região</h2>
-            <p>oeste: com o famoso ditado, o caminhão tombou, lá é onde se encontra todo tipo de produto roubado ou falsificado, obviamente com um preço muito mais acessível, assim como de madrugada a leste fica restrita a adultos a oeste fica restrita a criminosos durante a madrugada, dizem as lendas que nos tuneis abandonados do metro o comercio fica bem mais obscuro, mas não é todos mundo que entra e muito menos conseguem sair.
-                centro e centro publico: como ja diz o nome é o centro e o coração das atividades econômicas, sendo o centro destinado ao trabalho e variedade de comercio  e o outro para necessidades publicas, tais como hospitais, delegacias, o ponto central dos transportes públicos, com preços e possibilidades mais baratas e de menor qualidade</p>
+            <p>Oeste: com o famoso ditado, o caminhão tombou, lá é onde se encontra todo tipo de produto roubado ou falsificado, obviamente com um preço muito mais acessível, assim como de madrugada a leste fica restrita a adultos a oeste fica restrita a criminosos durante a madrugada, dizem as lendas que nos tuneis abandonados do metro o comercio fica bem mais obscuro, mas não é todos mundo que entra e muito menos conseguem sair.</p>
+            <p>Centro e centro publico: como ja diz o nome é o centro e o coração das atividades econômicas, sendo o centro destinado ao trabalho e variedade de comercio  e o outro para necessidades publicas, tais como hospitais, delegacias, o ponto central dos transportes públicos, com preços e possibilidades mais baratas e de menor qualidade</p>
         </div>
     </main>
 </body>
