--- a/index.html
+++ b/index.html
@@ -49,16 +49,10 @@ coords="298,595,304,615,293,630,282,663,291,695,302,719,349,697,351,690,356,691,
         </div>
 
         <div id="info">
-            <h2>Nome da região</h2>
-            <p>Oeste: com o famoso ditado "o caminhão tombou", lá é onde se encontra todo tipo de produto roubado ou
-                falsificado, obviamente com um preço muito mais acessível assim como de madrugada a leste fica restrita
-                a adultos a oeste fica restrita a criminosos durante a madrugada, dizem as lendas que nos tuneis
-                abandonados do metro o comercio fica bem mais obscuro, mas não é todos mundo que entra e muito menos
-                conseguem sair.</p>
-            <p>Centro e centro publico: como ja diz o nome é o centro e o coração das atividades econômicas, sendo o
-                centro destinado ao trabalho e variedade de comercio e o outro para necessidades publicas, tais como
-                hospitais, delegacias, o ponto central dos transportes públicos, com preços e possibilidades mais
-                baratas e de menor qualidade</p>
+            <h2>INFORMAÇÕES DA REGIÃO</h2>
+            <p>Aqui irão aparecer informações referentes a cada região do mapa.</p>
+            <p>Basta clicar em qualquer região do mapa ao lado para verificar informações relacionadas às mesmas.</p>
+            <img id="imagem-anya" src="imagens/anya-modified.png" alt="">
         </div>
     </main>
 
