--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@ coords="298,595,304,615,293,630,282,663,291,695,302,719,349,697,351,690,356,691,
 
         <div id="info">
             <h2>INFORMAÇÕES DA REGIÃO</h2>
-            <p>Aqui irão aparecer informações referentes a cada região do mapa.</p>
-            <p>Basta clicar em qualquer região do mapa ao lado para verificar informações relacionadas às mesmas.</p>
+            <p>São 5 areas e 3 pontos de interesse</p>
+            <p><b>norte:</b> é a área onde se concentra a maior quantidade de pessoas e residência entre todas as outras, esquecido pelo poder publico há uma concentração de um grande numero de casos de crimes hediondos e de sub facções que tentam de qualquer forma ter o controle da região</p>
+            <p><b>Sul:</b> sendo o completo oposto da norte, é onde se concentra o menor numero de habitantes e residências, em contra partida  o poder de compra de seus moradores são os mais altos, com ali vivendo todo tipo de pessoa com grande influencia.</p>
+            <p><b>Leste:</b> a região mais atrativa e turística de toda Salmonthy, banhada pela agua, a praia e os restaurantes a beira-mar são atrativos para toda população, porém quando a tarde caí um outro tipo de entretenimento se faz presente e nem todos conseguem desfrutar de seus pecados, com casas noturnos, prostibulos e o cassino a madrugada é bem mais longa que o dia</p>
             <img id="imagem-anya" src="imagens/anya-modified.png" alt="">
         </div>
     </main>
