--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <main>
         <div id="imagem-container">
             <!-- Image -->
-            <img  id="imagem" src="imagens/salmonthy_gg.png" usemap="#image-map">
+            <img  id="imagem" src="imagens/salmonthy_g.png" usemap="#image-map">
 
             <!-- Indice -->
             <img id="indice-mapa" src="imagens/indice.png" alt="indice do mapa">
 
             <!-- Info -->
         </div>
-        
+
         <div id="info">
             <h2>INFORMAÇÕES DA REGIÃO</h2>
 
