--- a/index.html
+++ b/index.html
@@ -27,19 +27,53 @@
         </div>
 
         <div id="info">
-            <h2>INFORMAÇÕES DA REGIÃO</h2>
+            <div class="home">
+                <h2>INFORMAÇÕES DA REGIÃO</h2>
+                <p>São 5 areas e 3 pontos de interesse</p>
+                <p><b>Norte:</b> é a área onde se concentra a maior quantidade de pessoas e residência entre todas as outras, esquecido pelo poder publico há uma concentração de um grande numero de casos de crimes hediondos e de sub facções que tentam de qualquer forma ter o controle da região</p>
+                <p><b>Sul:</b> sendo o completo oposto da norte, é onde se concentra o menor numero de habitantes e residências, em contra partida  o poder de compra de seus moradores são os mais altos, com ali vivendo todo tipo de pessoa com grande influencia.</p>
+                <p><b>Leste:</b> a região mais atrativa e turística de toda Salmonthy, banhada pela agua, a praia e os restaurantes a beira-mar são atrativos para toda população, porém quando a tarde caí um outro tipo de entretenimento se faz presente e nem todos conseguem desfrutar de seus pecados, com casas noturnos, prostibulos e o cassino a madrugada é bem mais longa que o dia</p>
+                <p><b>Oeste:</b> com o famoso ditado, o caminhão tombou, lá é onde se encontra todo tipo de produto roubado ou falsificado, obviamente com um preço muito mais acessível, assim como de madrugada a leste fica restrita a adultos a oeste fica restrita a criminosos durante a madrugada, dizem as lendas que nos tuneis abandonados do metro o comercio fica bem mais obscuro, mas não é todos mundo que entra e muito menos conseguem sair.</p>
+                <p><b>Centro e Centro Público:</b> como ja diz o nome é o centro e o coração das atividades econômicas, sendo o centro destinado ao trabalho e variedade de comercio  e o outro para necessidades publicas, tais como hospitais, delegacias, o ponto central dos transportes públicos, com preços e possibilidades mais baratas e de menor qualidade</p>
+            </div>
+<!---------------------------- REGIOES DO MAPA -------------------------->
+            <div class="centro">
+                <h2>CENTRO</h2>
+                <p>Diferente de todos os outros esse tem uma grande sensação de claustrofobico, devido aos prédios enormes que mal deixavam o sol chegar no solo, se procura um emprego, lá é um bom lugar para ir atrás, e divide com a leste as residenciais da classe media.</p>
+            </div>
+            <div class="docas">
+                <h2>DOCAS</h2>
+                <p>Além de ser usado como despacho para os navios tambem, é despacho para os acertos de contas no porto, são poucas noticias que se tem de la, mas as suspeitas contra as vistorias são altas.</p>
+            </div>
+            <div class="porto">
+                <h2>PORTO</h2>
+                <p>Com diversos ex-presidiários tralhando ali deixa o porto bem menos confiável aos olhos da sociedade, mas ele incrivelmente está funcionando e dificilmente sai nas capas de jornais, apenas quando há acertos de contas lá dentro....</p>
+            </div>
+            <div class="hangar">
+                <h2>HANGAR</h2>
+                <p style="text-align:center; text-indent:0px; vertical-align:middle">Hangar</p>
+            </div>
+            <div class="sul">
+                <h2>SUL</h2>
+                <p>Mansões enormes dentro de condomínios maiores ainda, cada vez mais luxuosos que apenas os aproveitadores/privilegiados da classe mais alta de Salmonthy.</p>
+            </div>
+            <div class="centro-publico">
+                <h2>CENTRO PÚBLICO</h2>
+                <p>Tão claustrofobico quanto o centro comum, porem o transito é tão caótico se for mais, já que os pontos principais de todos os transportes públicos se encontram la, então não se assuste se não conseguir pegar 3 ou 4 transportes na hora do rush.</p>
+            </div>
+            <div class="oeste">
+                <h2>OESTE</h2>
+                <p>Comerciantes malandros, preços lá em baixo e produtos de origem duvidosa, tudo isso e muito mais se encontra nos grandes mercados da Oeste, que ainda tem seus diversos segredos, as ruas são o caminho para desvenda-lo melhor, mas não é uma tarefa muito fácil.</p>
+            </div>
+            <div class="norte">
+                <h2>NORTE</h2>
+                <p>Por ser próxima as colinas e com diversas pessoas amontoadas a norte se assemelha com comunidades cariocas, com diversos becos e vielas, quanto mais alto for pior é o deslocamento por meio de carros.</p>
+            </div>
+            <div class="leste">
+                <h2>LESTE</h2>
+                <p>Parece ser dois locais em um dependendo do horário que se visita, quando se existe sol, um convite para toda família desfrutar dos restaurantes, shoppings, praias e tudo mais, porem quando se anoitece, e se aproxima mais do mar, uma caixa de pandora com os 7 pecados se abre, com casinos, bares, casas noturnas, prostitutos e todo o prazer carnal mal visto perante ao Senhor.</p>
+            </div>
 
-            <p>São 5 areas e 3 pontos de interesse</p>
-
-            <p><b>Norte:</b> é a área onde se concentra a maior quantidade de pessoas e residência entre todas as outras, esquecido pelo poder publico há uma concentração de um grande numero de casos de crimes hediondos e de sub facções que tentam de qualquer forma ter o controle da região</p>
-
-            <p><b>Sul:</b> sendo o completo oposto da norte, é onde se concentra o menor numero de habitantes e residências, em contra partida  o poder de compra de seus moradores são os mais altos, com ali vivendo todo tipo de pessoa com grande influencia.</p>
-
-            <p><b>Leste:</b> a região mais atrativa e turística de toda Salmonthy, banhada pela agua, a praia e os restaurantes a beira-mar são atrativos para toda população, porém quando a tarde caí um outro tipo de entretenimento se faz presente e nem todos conseguem desfrutar de seus pecados, com casas noturnos, prostibulos e o cassino a madrugada é bem mais longa que o dia</p>
-
-            <p><b>Oeste:</b> com o famoso ditado, o caminhão tombou, lá é onde se encontra todo tipo de produto roubado ou falsificado, obviamente com um preço muito mais acessível, assim como de madrugada a leste fica restrita a adultos a oeste fica restrita a criminosos durante a madrugada, dizem as lendas que nos tuneis abandonados do metro o comercio fica bem mais obscuro, mas não é todos mundo que entra e muito menos conseguem sair.</p>
-
-            <p><b>Centro e Centro Público:</b> como ja diz o nome é o centro e o coração das atividades econômicas, sendo o centro destinado ao trabalho e variedade de comercio  e o outro para necessidades publicas, tais como hospitais, delegacias, o ponto central dos transportes públicos, com preços e possibilidades mais baratas e de menor qualidade</p>
         </div>
 
 
